# imeta_y1_ros2

./: README.md
imeta_y1/: CMakeLists.txt  package.xml
imeta_y1_bringup/: CMakeLists.txt  package.xml
imeta_y1_bringup/config/: controllers.yaml
imeta_y1_bringup/launch/: bringup.launch.py  imeta_y1_isaac_sim.launch.py  imeta_y1_mock.launch.py  imeta_y1_real_world.launch.py  isaac_sim.launch.py  mock.launch.py  mujoco.launch.py  real_world.launch.py
imeta_y1_bringup/launch/include/: controllers.launch.py
imeta_y1_description/: CMakeLists.txt  package.xml
imeta_y1_description/launch/: view_imeta_y1.launch.py
imeta_y1_description/meshes/imeta_y1/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
imeta_y1_description/rviz/: imeta_y1.rviz
imeta_y1_description/urdf/: imeta_y1.urdf  imeta_y1.urdf.xacro
imeta_y1_description/urdf/imeta_y1/: imeta_y1_macro.ros2_control.xacro  imeta_y1_macro.urdf.xacro
imeta_y1_description/urdf/imeta_y1/include/: gazebo.ros2_control.xacro  gazebo_classic.ros2_control.xacro  isaac_sim.ros2_control.xacro  mock.ros2_control.xacro  mujoco.ros2_control.xacro  real_world.ros2_control.xacro
imeta_y1_description/usd/imeta_y1/: imeta_y1.usd
imeta_y1_description/usd/imeta_y1/configuration/: imeta_y1_physics.usd  imeta_y1_sensor.usd
imeta_y1_hardware/: CMakeLists.txt  README.md  imeta_y1_hardware.xml  package.xml
imeta_y1_hardware/include/imeta_y1_hardware/: imeta_y1_hardware.hpp
imeta_y1_hardware/src/: imeta_y1_hardware.cpp
imeta_y1_hardware/y1_sdk/: y1_sdk_interface.h
