<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imeta_y1_bringup</name>
  <version>1.0.0</version>
  <maintainer email="maintainer@imeta.com">IMeta Robotics</maintainer>
  <maintainer email="maintainer@imeta.com">IMeta Robotics</maintainer>
  <description>IMeta Y1 Bringup</description>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>